@@ -8,8 +8,8 @@ import com.example.backend.service.PlayerService;
 import com.example.backend.service.TeamService;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -33,10 +34,10 @@ public class PlayerController {
     }
 
     @GetMapping
-    public List<PlayerResponseDto> findAll() {
-        return playerService.findAll().stream()
+    public List<PlayerResponseDto> findAll(Pageable pageable) {
+        return playerService.findAll(pageable).stream()
                 .map(playerMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}")
@@ -47,14 +48,14 @@ public class PlayerController {
     @PutMapping("/{id}")
     public PlayerResponseDto update(@PathVariable Long id,
                                     @Valid @RequestBody PlayerRequestDto dto) {
-        return playerMapper.toDto(playerService.update(id, playerMapper.toModel(dto)));
+        return playerMapper.toDto(playerService.updatePlayerInfo(id, playerMapper.toModel(dto)));
     }
 
     @PutMapping("/{playerId}/teams/{teamId}")
     public void hirePlayerToTeam(@PathVariable Long playerId,
                                  @PathVariable Long teamId) {
         Team team = teamService.findById(teamId);
-        playerService.hire(playerId, team);
+        playerService.hirePlayerToTeam(playerId, team);
     }
 
     @DeleteMapping("/{id}")
@@ -64,7 +65,11 @@ public class PlayerController {
 
     @DeleteMapping("/{id}/fire")
     public void firePlayer(@PathVariable Long id) {
-        Team team = teamService.findById(playerService.findById(id).getTeam().getId());
-        playerService.fire(id, team);
+        playerService.firePlayerFromTeam(id);
+    }
+
+    @GetMapping("/search")
+    public List<PlayerResponseDto> search(@RequestParam String name) {
+        return playerService.search(name).stream().map(playerMapper::toDto).toList();
     }
 }
